@@ -31,6 +31,8 @@ Changed
  - Upgraded Json.Net to 5.0.6
 - Query
  - IValuedNode contract changed to have both AsDateTime() and AsDateTimeOffset() methods (CORE-365)
+- Storage
+ - Add partial support for connections to Stardog 2.0 servers
 - Configuration API
  - ConfiguationLoader had IConfigurationLoader interface extracted (CORE-362)
 - Writing
